Optimizing the codes

--- a/1-Optimization_Model.ipynb
+++ b/1-Optimization_Model.ipynb
@@ -116,28 +116,14 @@
    "execution_count": 9,
    "outputs": [],
    "source": [
-    "demand_coeff = 0.08"
+    "demand_coeff = 0.08\n",
+    "Demand = Demand_org * demand_coeff"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
      "end_time": "2024-04-28T19:41:22.045211400Z",
      "start_time": "2024-04-28T19:41:22.021205300Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "outputs": [],
-   "source": [
-    "Demand = Demand_org * demand_coeff"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-04-28T19:41:22.478536100Z",
-     "start_time": "2024-04-28T19:41:22.455563Z"
     }
    }
   },
